# ML-2025.2-CV-Ranking-System

./: .env.example  .gitignore  CREDENTIALS_SETUP.md  CREDENTIALS_SETUP_QUICK_START.md  DATA_NORMALIZATION.md  FINETUNE_GUIDE.md  README.md  proposal.md  pyproject.toml  requirements.txt  setup_credentials.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
data/resume_jd_match/: README.md
data/resume_score/: README.md  dataset-card.yaml  empty_additional_info_0.json  empty_additional_info_1.json  empty_additional_info_10.json  empty_additional_info_11.json  empty_additional_info_110.json  empty_additional_info_111.json  empty_additional_info_112.json  empty_additional_info_113.json  empty_additional_info_114.json  empty_additional_info_115.json  empty_additional_info_116.json  empty_additional_info_117.json  empty_additional_info_118.json  empty_additional_info_119.json  empty_additional_info_12.json  empty_additional_info_120.json  empty_additional_info_121.json  empty_additional_info_122.json  empty_additional_info_123.json  empty_additional_info_124.json  empty_additional_info_125.json  empty_additional_info_13.json  empty_additional_info_14.json  empty_additional_info_15.json  empty_additional_info_16.json  empty_additional_info_17.json  empty_additional_info_18.json  empty_additional_info_19.json  empty_additional_info_2.json  empty_additional_info_20.json  empty_additional_info_3.json  (+1000 more)
tests/: test_extraction_repair_loop.py  test_extraction_schemas.py  test_finetuned_models.py  test_judge_schema.py  test_render.py  test_retrieval_rank_smoke.py
(+1079 files in other folders)
